# dotcd

./: .SRCINFO  Cargo.toml
src/: main.rs
src/controllers/: command.rs  console.rs  controld.rs  mod.rs  resolved_conf.rs
src/runners/: cli.rs  mod.rs  stdio.rs  tray.rs
